--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
   <link href="https://fonts.cdnfonts.com/css/sf-distant-galaxy" rel="stylesheet">
+  <link href="https://fonts.cdnfonts.com/css/ikka-rounded" rel="stylesheet">
+                
 
 
 </head>
@@ -26,7 +28,7 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand starwars" href="#page-top">Mi Cumpleaños</a>
+      <a class="navbar-brand letra" href="#page-top"> ⚽ Mi Cumpleaños</a>
       <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button"
         data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -35,20 +37,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded starwars"
-              href="#portfolio">Ubicacion</a></li>
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded starwars"
-              href="#about">Confirmacion</a></li>
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded starwars"
-              href="#contact">Contacto</a></li>
+          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
+              href="#portfolio">🗺️ Ubicacion</a></li>
+          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
+              href="#about">📨 Confirmacion</a></li>
+          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
+              href="#contact">📞Contacto</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <header class="masthead bg-primary text-white text-center"
-    style="background:url('./assets/img/wallpaper.jpg');background-size: cover">
+  <header class="masthead bg-primary text-white text-center fondo">
     <div class="container d-flex align-items-center flex-column">
-      <img class="masthead-avatar mb-5" src="assets/img/jotai.svg" alt="..." />
+      <img class="masthead-avatar mb-5" src="assets/img/jotai.svg" alt="..."/>
       <h1 class="masthead-heading text-uppercase mb-0 starwars">Juan Ignacio</h1>
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
@@ -64,8 +65,8 @@
 
     <div class="container">
 
-      <h1 class="starwars2">Amigo</h1>
-      <h2 class="starwars">Falta poco para que celebremos mis 8 añitos. Te invito que celebres con migo el dia Sabado 18
+      <h1 class="letra">Amigo</h1>
+      <h2 class="letra">Falta poco para que celebremos mis 8 añitos. Te invito que celebres con migo el dia Sabado 18
         de marzo.</h2>
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
@@ -122,7 +123,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Direccion:</h4>
-                  <p>Al lado de la casa abandonada....</p>
+                  <p>Alto las tejas, Quincahue, San Pedro, Region de Valparaiso.  (al lado de la casa abandonada)</p>
                 </div>
 
 
@@ -130,7 +131,7 @@
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Llamanos:</h4>
-                  <p>+56 9 9999999999</p>
+                  <p>+56 9 79872958</p>
                 </div>
 
               </div>
@@ -170,7 +171,7 @@
       </div>
       <div class="row">
 
-        <a href="#link" class="btn btn-light" role="button"><img src="./assets/img/logo-whatsapp-png-file-15.png"></a>
+        <a href="https://wa.me/56979872958" class="btn btn-light" role="button"><img src="./assets/img/logo-whatsapp-png-file-15.png"></a>
       </div>
 
     </div>
