--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
               href="#ubicacion">📨 Ubicacion</a></li>
           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
-              href="#sobremi">📞Sobre Mi</a></li>
+              href="#sobremi">😎 Sobre Mi</a></li>
           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
-              href="#confirmacion">📞Contacto</a></li>
+              href="#confirmacion">📞 Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -136,11 +136,11 @@
           </div>
           <br/>
           <div class="row">
-            <a href="#link" class="btn btn-success" role="button">Google Maps</a>
+            <a href="https://goo.gl/maps/Uozy9foBuMKxebTE6" class="btn btn-success" role="button">Google Maps</a>
           </div>
           <br />
           <div class="row">
-            <a href="#link" class="btn btn-info" role="button">Waze</a>
+            <a href="https://waze.com/ul/h63vpy2svn" class="btn btn-info" role="button">Waze</a>
           </div>
         </div>
       </div>
