--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               href="#invitacion">🗺️ Invitacion</a></li>
           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
               href="#ubicacion">📨 Ubicacion</a></li>
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
-              href="#sobremi">😎 Sobre Mi</a></li>
+          <!-- <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
+              href="#sobremi">😎 Sobre Mi</a></li> -->
           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded letra"
               href="#confirmacion">📞 Contacto</a></li>
         </ul>
@@ -52,13 +52,15 @@
   <header class="masthead bg-primary text-white text-center fondo">
     <div class="container d-flex align-items-center flex-column">
       <img class="masthead-avatar mb-5" src="assets/img/jotai.svg" alt="..."/>
-      <h1 class="masthead-heading text-uppercase mb-0 starwars">Juan Ignacio</h1>
-      <div class="divider-custom divider-light">
+      <h1 class="masthead-heading text-uppercase mb-0 starwars2">Juan Ignacio</h1>
+      <!-- <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
         <div class="divider-custom-line"></div>
-      </div>
-      <p class="masthead-subheading font-weight-light mb-0">Te invito a mi cumpleaños</p>
+      </div> -->
+      <p class="masthead-subheading font-weight-light mb-0 starwars2">está cumpliendo</p>
+<center><p class="starwars2">8</p></center>
+<center><p class="starwars2">Años</p></center>
     </div>
   </header>
   <section class="page-section portfolio" id="invitacion">
@@ -67,9 +69,9 @@
 
     <div class="container">
 
-      <h1 class="letra">Amigo</h1>
-      <h2 class="letra">Falta poco para que celebremos mis 8 añitos. Te invito que celebres con migo el dia Sabado 18
-        de marzo.</h2>
+      <!-- <h1 class="letra">Amigo</h1> -->
+      <h2 class="letra">Te invitamos a que nos acompañen a celebrar el dia sábado 18 de marzo desde las 14:00.</h2>
+      <h2 class="letra">Trae tu traje de baño 🏊‍♂️ y ganas de pasarlo bien 😎.</h2>
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
@@ -146,12 +148,11 @@
       </div>
   </section>
 
-  <section id="sobremi" class="page-section bg-info">
+  <!-- <section id="sobremi" class="page-section bg-info">
                <div class="container">
 
-      <h1 class="letra">Amigo</h1>
-      <h2 class="letra">Falta poco para que celebremos mis 8 añitos. Te invito que celebres con migo el dia Sabado 18
-        de marzo.</h2>
+      <h1 class="letra">Te cuento algunas cosas sobre mi:</h1>
+      <h2 class="letra">Me gusta los video juegos</h2>
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
@@ -160,7 +161,7 @@
 
      
     </div>
-  </section>
+  </section> -->
        
 
   <section class="page-section bg-light" id="confirmacion">
