--- a/index.html
+++ b/index.html
@@ -7,25 +7,17 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Te invito a mi fiesta</title>
-  <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-  <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-  <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
     type="text/css" />
-  <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
   <link href="https://fonts.cdnfonts.com/css/sf-distant-galaxy" rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/ikka-rounded" rel="stylesheet">
-                
-
-
 </head>
 
 <body id="page-top">
-  <!-- Navigation-->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand letra" href="#page-top"> ⚽ Mi Cumpleaños</a>
@@ -101,7 +93,7 @@
   </section>
   <section class="page-section bg-primary text-white mb-0" id="ubicacion">
     <div class="container">
-      <h2 class="page-section-heading text-center text-uppercase text-white starwars">Ubicacion</h2>
+      <h2 class="page-section-heading text-center text-uppercase text-white starwars">Ubicación</h2>
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
@@ -117,7 +109,7 @@
         </div>
         <div class="col-lg-6 me-auto">
           <div class="row">
-            <p class="lead">Te dejamos tambien el link a google maps, para que te guie como llegar</p>
+            <p class="lead">Te dejamos también el link a google maps, para que te guie como llegar</p>
           </div>
           <div class="row">
             <div class="d-flex align-items-stretch">
@@ -125,7 +117,7 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Direccion:</h4>
-                  <p>Alto las tejas, Quincahue, San Pedro, Region de Valparaiso.  (al lado de la casa abandonada)</p>
+                  <p>Alto las tejas, Quincahue, San Pedro, Región de Valparaiso.  (pasando una casa casa abandonada a la izquierda...)</p>
                 </div>
                 <div class="phone">
                   <i class="bi bi-phone"></i>
@@ -166,9 +158,7 @@
 
   <section class="page-section bg-light" id="confirmacion">
     <div class="container">
-      <!-- Contact Section Heading-->
       <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Confirmo</h2>
-      <!-- Icon Divider-->
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
@@ -179,7 +169,7 @@
       </div>
       <div class="row">
 
-        <a href="https://wa.me/56979872958" class="btn btn-light" role="button"><img src="./assets/img/logo-whatsapp-png-file-15.png"></a>
+        <a href="https://wa.me/56979872958?text=Confirmamos%20la%20asistencia%20al%20cumeplaños%20de%20Jotai" class="btn btn-light" role="button"><img src="./assets/img/logo-whatsapp-png-file-15.png"></a>
       </div>
 
     </div>
@@ -189,7 +179,6 @@
   <footer class="footer text-center">
     <div class="container">
       <div class="row">
-        <!-- Footer Location-->
         <div class="col-lg-6 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Contacto</h4>
           <p class="lead mb-0">
@@ -199,7 +188,6 @@
           </p>
         </div>
        
-        <!-- Footer About Text-->
         <div class="col-lg-6">
           <h4 class="text-uppercase mb-4">Acerca de...</h4>
           <p class="lead mb-0">
@@ -209,14 +197,11 @@
       </div>
     </div>
   </footer>
-  <!-- Copyright Section-->
   <div class="copyright py-4 text-center text-white">
     <div class="container"><small>Copyright &copy; cuchitux 2022</small></div>
   </div>
 
-  <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
   <script src="js/scripts.js"></script>
   <script src="js/main.js" />
   <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
