Arreglo en cuenta atras

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0 starwars4">¿Cuanto falta?</h2>
 
-      <div class="countdown d-flex justify-content-center" data-count="2023/3/18">
+      <div class="countdown d-flex justify-content-center" data-count="2023/3/18 14:00">
         <div>
           <h3 class="starwars2">%d</h3>
           <h4 class="starwars2">Dias</h4>
